# corr-vars-widget

./: .gitignore  LICENSE  README.md  components.json  package-lock.json  package.json  pyproject.toml  svelte.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vite.dev.config.ts  vite.obs.config.ts  vite.obs.dev.config.ts  vite.obsm.config.ts  vite.obsm.dev.config.ts
notebooks/: example.ipynb
py/corr_vars_widget/: __init__.py
py/ipyfoo/: __init__.py
src/: App.svelte  Obs.svelte  Obsm.svelte  app.css  main.ts  obs.ts  obsm.ts
src/utils/: assert.ts  mosaic.ts
