[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corr_vars_widget"
version = "0.0.0"
dependencies = ["anywidget"]
readme = "README.md"
requires-python=">=3.9"

# Dependency groups (recognized by `uv`). For more details, visit:
# https://peps.python.org/pep-0735/
[dependency-groups]
dev = ["watchfiles", "jupyterlab", "duckdb", "polars", "pyarrow"]

[tool.hatch.build]
only-packages = true
packages = ["py/corr_vars_widget"]
artifacts = ["py/corr_vars_widget/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["py/corr_vars_widget/static/main.js"]
skip-if-exists = ["py/corr_vars_widget/static/main.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
